force-app/main/default/objects/Product2/fields/Type_No__c.field-meta.xml
<CustomField>
    <fullName>Type_No__c</fullName>
    <description>Unique product type number.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique product type number. Not used for quotations</inlineHelpText>
    <label>Type Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>