force-app/main/default/objects/Product2/fields/Valid_COGS_Info__c.field-meta.xml
<CustomField>
    <fullName>Valid_COGS_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the link to currently valid COGS information</description>
    <inlineHelpText>This is the link to currently valid COGS information</inlineHelpText>
    <label>Predicted COGS Info</label>
    <referenceTo>COGS_Set__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>