force-app/main/default/objects/Product2/fields/Valid_For_3__c.field-meta.xml
<CustomField>
    <fullName>Valid_For_3__c</fullName>
    <inlineHelpText>Period when COGS 3 is valid</inlineHelpText>
    <label>Valid For 3</label>
    <length>15</length>
    <type>Text</type>
</CustomField>