force-app/main/default/objects/Product2/fields/Visible_To_Partner__c.field-meta.xml
<CustomField>
    <fullName>Visible_To_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the product will be included in the Masterschedule visible to the partner.</description>
    <inlineHelpText>When checked, the product will be included in the Masterschedule visible to the partner.</inlineHelpText>
    <label>Visible To Partner</label>
    <type>Checkbox</type>
</CustomField>