force-app/main/default/objects/Product2/validationRules/Document_availability_dates_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Document_availability_dates_check</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
OR(
NOT( ISBLANK( PT_Availability_Date__c ) ),
NOT( ISBLANK( ES_Availability_Date__c ) )
),
OR( 
ISBLANK( PS_Availability_Date__c ),
ISBLANK( DS_Availability_Date__c ),
ISBLANK( Manual_Availability_Date__c )
)
)</errorConditionFormula>
    <errorMessage>When PT Availability Date or ES Availability Date is filled, document availability fields (PS Availability Date, DS Availability Date, Manual Availability Date) must be filled.</errorMessage>
</ValidationRule>