force-app/main/default/objects/Product2/validationRules/Validate_Successor_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Successor_Product</fullName>
    <active>true</active>
    <description>Successor Product should belongs to same family</description>
    <errorConditionFormula>AND( ISCHANGED(Successor_Product__c), Successor_Product__c != NULL, TEXT(Family) != TEXT(Successor_Product__r.Family))</errorConditionFormula>
    <errorDisplayField>Successor_Product__c</errorDisplayField>
    <errorMessage>Successor product should belongs to same family</errorMessage>
</ValidationRule>