force-app/main/default/objects/Product2/listViews/Active_Automotive_products.listView-meta.xml
<ListView>
    <fullName>Active_Automotive_products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Type_No__c</columns>
    <columns>Packaging_Size__c</columns>
    <columns>Status_Next_Gate__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Successor_Product_Type_No__c</columns>
    <columns>Cellular_Technology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Automotive_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Automotive products</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
        <role>Partner_Sacoel</role>
        <role>Partner_Steliau_Technology</role>
    </sharedTo>
</ListView>