force-app/main/default/objects/Product2/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Type_No__c</columns>
    <columns>Packaging_Size__c</columns>
    <columns>Status_Next_Gate__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Successor_Product_Type_No__c</columns>
    <columns>Cellular_Technology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>