force-app/main/default/objects/Product2/listViews/All_Cellular_LTE_Modules.listView-meta.xml
<ListView>
    <fullName>All_Cellular_LTE_Modules</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Type_No__c</columns>
    <columns>Packaging_Size__c</columns>
    <columns>Status_Next_Gate__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>COGS_1__c</columns>
    <columns>COGS_Pct__c</columns>
    <columns>Product_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Technology__c</field>
        <operation>equals</operation>
        <value>LTE</value>
    </filters>
    <label>All Cellular LTE Modules</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
    </sharedTo>
</ListView>