force-app/main/default/objects/Product2/listViews/All_CIoT_Modules.listView-meta.xml
<ListView>
    <fullName>All_CIoT_Modules</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cellular_Technology__c</field>
        <operation>contains</operation>
        <value>CIoT</value>
    </filters>
    <label>All CIoT Modules</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
    </sharedTo>
</ListView>