force-app/main/default/objects/Product2/listViews/All_Services_Products.listView-meta.xml
<ListView>
    <fullName>All_Services_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Type_No__c</columns>
    <columns>Status_Next_Gate__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Services</value>
    </filters>
    <label>All Services Products</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
    </sharedTo>
</ListView>