force-app/main/default/objects/Product2/listViews/All_Short_Range_Products.listView-meta.xml
<ListView>
    <fullName>All_Short_Range_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Type_No__c</columns>
    <columns>Packaging_Size__c</columns>
    <columns>Status_Next_Gate__c</columns>
    <columns>Product_Series__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Short_Range_Technology__c</columns>
    <columns>COGS_1__c</columns>
    <columns>Chip_Supplier__c</columns>
    <columns>Chip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Short Range</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SHO all products</label>
    <sharedTo>
        <group>AE_SHO</group>
        <group>PS_SHO</group>
    </sharedTo>
</ListView>