force-app/main/default/objects/Product2/listViews/All_Short_Range_Wi_Fi_only.listView-meta.xml
<ListView>
    <fullName>All_Short_Range_Wi_Fi_only</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Type_No__c</columns>
    <columns>Product_Owner__c</columns>
    <columns>Product_Status__c</columns>
    <columns>PT_Availability_Date__c</columns>
    <columns>ES_Availability_Date__c</columns>
    <columns>IP_Availability_Date__c</columns>
    <columns>Comment__c</columns>
    <columns>COGS_EUR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Short Range</value>
    </filters>
    <filters>
        <field>Short_Range_Technology__c</field>
        <operation>equals</operation>
        <value>Wi-Fi 802.11ac,Wi-Fi 802.11n</value>
    </filters>
    <filters>
        <field>Product_Category__c</field>
        <operation>notEqual</operation>
        <value>Internal Use Only,Antennas</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Short Range Wi-Fi only</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
    </sharedTo>
</ListView>